fix: fixed artist loader, headings overflow, white default color

--- a/src/components/heading/heading.scss
+++ b/src/components/heading/heading.scss
@@ -4,6 +4,7 @@
   max-height: 500px;
   position: relative;
   background-color: var(--secondary-color);
+  overflow: hidden;
 
   h1 {
     top: 50%;
