--- a/src/index.scss
+++ b/src/index.scss
@@ -123,7 +123,7 @@ small {
 }
 
 #page {
-  color: #fff;
+  color: var(--secondary-color);
   margin: 0 auto;
   flex-grow: 1;
   width: 100%;
